# name: test_attach_group_transform[many]
  <class 'list'> [
    <class 'dict'> {
      '_id': 'doc_0',
      'group': <class 'dict'> {
        'id': 'bf1b993c',
        'name': 'musicians',
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
      },
    },
    <class 'dict'> {
      '_id': 'doc_1',
      'group': <class 'dict'> {
        'id': 'fb085f7f',
        'name': 'hydrogeologists',
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
      },
    },
    <class 'dict'> {
      '_id': 'doc_2',
      'group': <class 'dict'> {
        'id': '7cf872dc',
        'name': 'architects',
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
      },
    },
  ]
---
# name: test_attach_group_transform[one]
  <class 'dict'> {
    '_id': 'doc_0',
    'group': <class 'dict'> {
      'id': 'bf1b993c',
      'name': 'musicians',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
    },
  }
---
# name: test_attach_groups_transform[many]
  <class 'list'> [
    <class 'dict'> {
      '_id': 'doc_0',
      'groups': <class 'dict'> {
        '7cf872dc': <class 'dict'> {
          'id': '7cf872dc',
          'name': 'architects',
          'permissions': <class 'dict'> {
            'cancel_job': False,
            'create_ref': False,
            'create_sample': False,
            'modify_hmm': False,
            'modify_subtraction': False,
            'remove_file': False,
            'remove_job': False,
            'upload_file': False,
          },
        },
        'bf1b993c': <class 'dict'> {
          'id': 'bf1b993c',
          'name': 'musicians',
          'permissions': <class 'dict'> {
            'cancel_job': False,
            'create_ref': False,
            'create_sample': False,
            'modify_hmm': False,
            'modify_subtraction': False,
            'remove_file': False,
            'remove_job': False,
            'upload_file': False,
          },
        },
        'fb085f7f': <class 'dict'> {
          'id': 'fb085f7f',
          'name': 'hydrogeologists',
          'permissions': <class 'dict'> {
            'cancel_job': False,
            'create_ref': False,
            'create_sample': False,
            'modify_hmm': False,
            'modify_subtraction': False,
            'remove_file': False,
            'remove_job': False,
            'upload_file': False,
          },
        },
      },
    },
    <class 'dict'> {
      '_id': 'doc_1',
      'groups': <class 'dict'> {
        '09d01419': <class 'dict'> {
          'id': '09d01419',
          'name': 'dietitians',
          'permissions': <class 'dict'> {
            'cancel_job': False,
            'create_ref': False,
            'create_sample': False,
            'modify_hmm': False,
            'modify_subtraction': False,
            'remove_file': False,
            'remove_job': False,
            'upload_file': False,
          },
        },
        '3cbb22cc': <class 'dict'> {
          'id': '3cbb22cc',
          'name': 'secretary/administrators',
          'permissions': <class 'dict'> {
            'cancel_job': False,
            'create_ref': False,
            'create_sample': False,
            'modify_hmm': False,
            'modify_subtraction': False,
            'remove_file': False,
            'remove_job': False,
            'upload_file': False,
          },
        },
        'da42dca3': <class 'dict'> {
          'id': 'da42dca3',
          'name': 'orthoptists',
          'permissions': <class 'dict'> {
            'cancel_job': False,
            'create_ref': False,
            'create_sample': False,
            'modify_hmm': False,
            'modify_subtraction': False,
            'remove_file': False,
            'remove_job': False,
            'upload_file': False,
          },
        },
      },
    },
    <class 'dict'> {
      '_id': 'doc_2',
      'groups': <class 'dict'> {
        '153ff459': <class 'dict'> {
          'id': '153ff459',
          'name': 'haematologists',
          'permissions': <class 'dict'> {
            'cancel_job': False,
            'create_ref': False,
            'create_sample': False,
            'modify_hmm': False,
            'modify_subtraction': False,
            'remove_file': False,
            'remove_job': False,
            'upload_file': False,
          },
        },
        '7aa59bf4': <class 'dict'> {
          'id': '7aa59bf4',
          'name': 'firefighters',
          'permissions': <class 'dict'> {
            'cancel_job': False,
            'create_ref': False,
            'create_sample': False,
            'modify_hmm': False,
            'modify_subtraction': False,
            'remove_file': False,
            'remove_job': False,
            'upload_file': False,
          },
        },
        'f60bae36': <class 'dict'> {
          'id': 'f60bae36',
          'name': 'contractors',
          'permissions': <class 'dict'> {
            'cancel_job': False,
            'create_ref': False,
            'create_sample': False,
            'modify_hmm': False,
            'modify_subtraction': False,
            'remove_file': False,
            'remove_job': False,
            'upload_file': False,
          },
        },
      },
    },
  ]
---
# name: test_attach_groups_transform[one]
  <class 'dict'> {
    '_id': 'doc',
    'groups': <class 'dict'> {
      '7cf872dc': <class 'dict'> {
        'id': '7cf872dc',
        'name': 'architects',
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
      },
      'bf1b993c': <class 'dict'> {
        'id': 'bf1b993c',
        'name': 'musicians',
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
      },
      'fb085f7f': <class 'dict'> {
        'id': 'fb085f7f',
        'name': 'hydrogeologists',
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
      },
    },
  }
---
# name: test_attach_groups_transform[one].1
  <class 'dict'> {
    '_id': 'doc',
    'groups': <class 'dict'> {
      '7cf872dc': <class 'dict'> {
        'id': '7cf872dc',
        'name': 'architects',
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
      },
      'bf1b993c': <class 'dict'> {
        'id': 'bf1b993c',
        'name': 'musicians',
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
      },
      'fb085f7f': <class 'dict'> {
        'id': 'fb085f7f',
        'name': 'hydrogeologists',
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
      },
    },
  }
---
